# chess-tactics-trainer

./: .gitignore  README.md  chess_tactics.sbatch  engine.py  evaluation.py  joboutput_1148853.out  main.py  puzzle_detection.py  puzzles.csv  pyproject.toml  requirements.txt  theme.json
benchmarks/: normal_engine_benchmark.csv  tactics_engine_benchmark.csv
puzzle_subsets/: all_puzzles.csv  fork_puzzles.csv  pin_puzzles.csv  skewer_puzzles.csv
puzzles/: puzzles.csv
sunfish/tools/: tester.py
