[project]
name = "cs310-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Henry Gao", email = "Henry.Gao@warwick.ac.uk" }
]
dependencies = [
    "pygame-ce>=2.5.3",
    "pygame-gui>=0.6.13",
    "pygame-menu-ce>=4.5.2",
    "chess>=1.11.2",
]
readme = "README.md"
requires-python = ">= 3.8"
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
"cs310-project" = "cs310_project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cs310_project"]
